--- a/branding/css/rhn-listview.css
+++ b/branding/css/rhn-listview.css
@@ -392,7 +392,7 @@ DIV.filter-input TABLE
 }
 DIV.filter-input TD
 {
-	width: 40%;
+	/*[disabled]width:30%;*/
 }
 DIV.filter-input INPUT
 {
